@@ -8,7 +8,7 @@
 #
 
 if ( ${?MGICONFIG} == 0 ) then
-	setenv MGICONFIG /usr/local/mgi/live/mgiconfig
+        setenv MGICONFIG /usr/local/mgi/live/mgiconfig
 endif
 
 source ${MGICONFIG}/master.config.csh
@@ -17,13 +17,13 @@ source ${MGICONFIG}/master.config.csh
 setenv PG_DB_SCHEMA mgd
 
 # directory
-setenv CACHEDIR			${DATALOADSOUTPUT}/mgi/seqcacheload
+setenv CACHEDIR                 ${DATALOADSOUTPUT}/mgi/seqcacheload
 
 # data directory
-setenv CACHEDATADIR		${CACHEDIR}/output
+setenv CACHEDATADIR             ${CACHEDIR}/output
 
 # logs directory
-setenv CACHELOGSDIR		${CACHEDIR}/logs
+setenv CACHELOGSDIR             ${CACHEDIR}/logs
 
 setenv COLDELIM       "|"
 setenv LINEDELIM      "\n"
@@ -35,41 +35,22 @@ setenv LINEDELIM      "\n"
 setenv SEQMARKER_DEBUG  false
 
 # biotype conflict equivalency mappings
-setenv NCBI_EQUIV	"null:all feature types,unknown:all feature types,other:all feature types,miscRNA:unclassified gene|non-coding RNA gene or its children,protein-coding:protein coding gene|polymorphic pseudogene,pseudo:pseudogene|pseudogenic gene segment|polymorphic pseudogene,rRNA:rRNA gene,snoRNA:snoRNA gene,snRNA:snRNA gene,scRNA:scRNA gene|SRP RNA gene,tRNA:tRNA gene,ncRNA:unclassified gene|unclassified non-coding RNA gene|lincRNA gene|miRNA gene|RNase MRP RNA gene|telomerase RNA gene|RNase P RNA gene"
+setenv NCBI_EQUIV	"null:all feature types or its children,unknown:all feature types or its children,other:all feature types or its children,miscRNA:unclassified gene|non-coding RNA gene or its children,protein-coding:protein coding gene|polymorphic pseudogene,pseudo:pseudogene|pseudogenic gene segment|polymorphic pseudogene,rRNA:rRNA gene,snoRNA:snoRNA gene,snRNA:snRNA gene,scRNA:scRNA gene|SRP RNA gene,tRNA:tRNA gene,ncRNA:non-coding RNA gene or its children,miRNA:miRNA gene,lncRNA:lncRNA gene|lincRNA gene,antisense_RNA:antisense lncRNA gene,RNase_MRP_RNA:RNase MRP RNA gene,telomerase_RNA:telomerase RNA gene,RNase_P_RNA:RNase P RNA gene"
 
-setenv ENSEMBL_EQUIV1	"IG_C_gene:gene segment,IG_D_gene:gene segment,IG_J_gene:gene segment,IG_V_gene:gene segment,IG_V_pseudogene:pseudogenic gene segment|pseudogenic region,miRNA:miRNA gene,misc_RNA:unclassified gene|non-coding RNA gene or its children,processed_transcript:unclassified gene|unclassified non-coding RNA gene|lincRNA gene,protein_coding:protein coding gene,pseudogene:pseudogenic region|pseudogene|pseudogenic gene segment,polymorphic_pseudogene:polymorphic pseudogene,rRNA:rRNA gene,snoRNA:snoRNA gene,snRNA:snRNA gene,lincRNA:lincRNA gene,Mt_tRNA:tRNA gene,Mt_rRNA:rRNA gene,3prime_overlapping_ncrna:unclassified non-coding RNA gene|unclassified gene,antisense:unclassified non-coding RNA gene|unclassified gene,ncrna_host:unclassified gene|non-coding RNA gene or its children|lincRNA gene"
+setenv ENSEMBL_EQUIV	"IG_C_gene:gene segment ,IG_D_gene:gene segment ,IG_J_gene:gene segment ,IG_V_gene:gene segment ,TR_V_gene:gene segment ,miRNA:miRNA gene,misc_RNA:unclassified gene|non-coding RNA gene or its children,processed_transcript:unclassified non-coding RNA gene|unclassified gene|lncRNA gene,protein_coding:protein coding gene,pseudogene:pseudogene,retrotransposed:pseudogene,polymorphic_pseudogene:polymorphic pseudogene,rRNA:rRNA gene,snoRNA:snoRNA gene,snRNA:snRNA gene,lincRNA:lincRNA gene,Mt_tRNA:tRNA gene,Mt_rRNA:rRNA gene,3prime_overlapping_ncrna:lncRNA gene,antisense:antisense lncRNA gene,ncrna_host:lncRNA gene,non_coding:unclassified gene|unclassified non-coding RNA gene,sense_intronic:intronic lncRNA gene,sense_overlapping:lncRNA gene,translated_processed_pseudogene:pseudogene,TR_J_pseudogene:pseudogenic gene segment,TR_pseudogene:pseudogenic gene segment,TR_V_pseudogene:pseudogenic gene segment,IG_C_pseudogene:pseudogenic gene segment,IG_J_pseudogene:pseudogenic gene segment,IG_pseudogene:pseudogenic gene segment,IG_V_pseudogene:pseudogenic gene segment,IG_gene:gene segment ,IG_M_gene:gene segment ,IG_Z_gene:gene segment ,TR_C_gene:gene segment ,TR_D_gene:gene segment ,TR_gene:gene segment ,TR_J_gene:gene segment ,IG_LV_gene:gene segment ,IG_D_pseudogene:gene segment ,transcribed_processed_pseudogene:pseudogene,transcribed_unprocessed_pseudogene:pseudogene,translated_unprocessed_pseudogene:pseudogene,unitary_pseudogene:pseudogene,TEC:unclassified gene,processed_pseudogene:pseudogene,unprocessed_pseudogene:pseudogene,macro_lncRNA:lncRNA gene,scaRNA:snoRNA gene,sRNA:unclassified non-coding RNA gene,ribozyme:ribozyme gene"
 
-setenv ENSEMBL_EQUIV2	"non_coding:unclassified non-coding RNA gene|unclassified gene,sense_intronic:unclassified non-coding RNA gene|unclassified gene,sense_overlapping:unclassified non-coding RNA gene|unclassified gene,retrotransposed:pseudogenic region|pseudogene|pseudogenic gene segment,TR_V_gene:gene segment,TR_V_pseudogene:pseudogenic gene segment|pseudogenic region,IG_gene:gene segment,IG_M_gene:gene segment,IG_Z_gene:gene segment,TR_C_gene:gene segment,TR_D_gene:gene segment,TR_gene:gene segment,TR_J_gene:gene segment,IG_LV_gene:gene segment,IG_D_pseudogene:pseudogenic gene segment|pseudogenic region,transcribed_processed_pseudogene:pseudogene|pseudogenic gene segment|pseudogenic region,transcribed_unprocessed_pseudogene:pseudogene|pseudogenic gene segment|pseudogenic region,translated_unprocessed_pseudogene:pseudogene|pseudogenic gene segment|pseudogenic region,unitary_pseudogene:pseudogene|pseudogenic gene segment|pseudogenic region"
-
-setenv ENSEMBL_EQUIV3	"TEC:all feature types,TR_J_pseudogene:pseudogenic gene segment|pseudogenic region,processed_pseudogene:pseudogene,unprocessed_pseudogene:pseudogene,translated_processed_pseudogene:pseudogenic region|pseudogene|pseudogenic gene segment"
-
-# The vega string is too long now, so split into multi variables
-setenv VEGA_EQUIV1	"protein_coding:protein coding gene,KNOWN_protein_coding:protein coding gene,NOVEL_protein_coding:protein coding gene,PUTATIVE_protein_coding:protein coding gene,_polymorphic:protein coding gene,KNOWN_polymorphic:protein coding gene,NOVEL_polymorphic:protein coding gene,PUTATIVE_polymorphic:protein coding gene,_processed_transcript:unclassified non-coding RNA gene|unclassified gene|lincRNA gene,KNOWN_processed_transcript:unclassified non-coding RNA gene|unclassified gene|lincRNA gene,NOVEL_processed_transcript:unclassified non-coding RNA gene|unclassified gene|lincRNA gene,PUTATIVE_processed_transcript:unclassified non-coding RNA gene|unclassified gene|lincRNA gene,_non_coding:unclassified non-coding RNA gene|unclassified gene,KNOWN_non_coding:unclassified non-coding RNA gene|unclassified gene,NOVEL_non_coding:unclassified non-coding RNA gene|unclassified gene,PUTATIVE_non_coding:unclassified non-coding RNA gene|unclassified gene"
-
-setenv VEGA_EQUIV2	"_3prime_overlapping_ncrna:unclassified non-coding RNA gene|unclassified gene,KNOWN_3prime_overlapping_ncrna:unclassified non-coding RNA gene|unclassified gene,NOVEL_3prime_overlapping_ncrna:unclassified non-coding RNA gene|unclassified gene,PUTATIVE_3prime_overlapping_ncrna:unclassified gene|unclassified non-coding RNA gene,_ambiguous_orf:protein coding gene|unclassified gene,KNOWN_ambiguous_orf:protein coding gene|unclassified gene,NOVEL_ambiguous_orf:protein coding gene|unclassified gene,PUTATIVE_ambiguous_orf:protein coding gene|unclassified gene,_antisense:unclassified non-coding RNA gene|unclassified gene,KNOWN_antisense:unclassified non-coding RNA gene|unclassified gene,NOVEL_antisense:unclassified non-coding RNA gene|unclassified gene,PUTATIVE_antisense:unclassified non-coding RNA gene|unclassified gene,_lincRNA:lincRNA gene"
-
-setenv VEGA_EQUIV3	"KNOWN_lincRNA:lincRNA gene,NOVEL_lincRNA:lincRNA gene,PUTATIVE_lincRNA:lincRNA gene,_ncRNA_host:unclassified gene|non-coding RNA gene or its children|lincRNA gene,KNOWN_ncRNA_host:unclassified gene|non-coding RNA gene or its children|lincRNA gene,NOVEL_ncRNA_host:unclassified gene|non-coding RNA gene or its children|lincRNA gene,PUTATIVE_ncRNA_host:unclassified gene|non-coding RNA gene or its children|lincRNA gene,_retained_intron:protein coding gene|unclassified gene,KNOWN_retained_intron:protein coding gene|unclassified gene,NOVEL_retained_intron:protein coding gene|unclassified gene,PUTATIVE_retained_intron:protein coding gene|unclassified gene"
-
-setenv VEGA_EQUIV4	"_sense_intronic:unclassified non-coding RNA gene|unclassified gene,KNOWN_sense_intronic:unclassified non-coding RNA gene|unclassified gene,NOVEL_sense_intronic:unclassified non-coding RNA gene|unclassified gene,PUTATIVE_sense_intronic:unclassified non-coding RNA gene|unclassified gene,_sense_overlapping:unclassified non-coding RNA gene|unclassified gene,KNOWN_sense_overlapping:unclassified non-coding RNA gene|unclassified gene,NOVEL_sense_overlapping:unclassified non-coding RNA gene|unclassified gene,PUTATIVE_sense_overlapping:unclassified non-coding RNA gene|unclassified gene,_IG_gene:gene segment,KNOWN_IG_gene:gene segment,NOVEL_IG_gene:gene segment,PUTATIVE_IG_gene:gene segment,_TR_gene:gene segment,KNOWN_TR_gene:gene segment,NOVEL_TR_gene:gene segment,PUTATIVE_TR_gene:gene segment,_pseudogene:pseudogene,KNOWN_pseudogene:pseudogene"
-
-setenv VEGA_EQUIV5	"NOVEL_pseudogene:pseudogene,PUTATIVE_pseudogene:pseudogene,_unprocessed_pseudogene:pseudogene,KNOWN_unprocessed_pseudogene:pseudogene,NOVEL_unprocessed_pseudogene:pseudogene,PUTATIVE_unprocessed_pseudogene:pseudogene,_processed_pseudogene:pseudogene,KNOWN_processed_pseudogene:pseudogene,NOVEL_processed_pseudogene:pseudogene,PUTATIVE_processed_pseudogene:pseudogene,_transcribed_processed_pseudogene:pseudogene,KNOWN_transcribed_processed_pseudogene:pseudogene,NOVEL_transcribed_processed_pseudogene:pseudogene,PUTATIVE_transcribed_processed_pseudogene:pseudogene,_transcribed_unprocessed_pseudogene:pseudogene,KNOWN_transcribed_unprocessed_pseudogene:pseudogene,NOVEL_transcribed_unprocessed_pseudogene:pseudogene,TEC:all feature types,_TEC:all feature types,KNOWN_TEC:all feature types,NOVEL_TEC:all feature types,PUTATIVE_TEC:all feature types"
-
-setenv VEGA_EQUIV6	"PUTATIVE_transcribed_unprocessed_pseudogene:pseudogene,_transcribed_unitary_pseudogene:pseudogene,KNOWN_transcribed_unitary_pseudogene:pseudogene,NOVEL_transcribed_unitary_pseudogene:pseudogene,_unitary_pseudogene:pseudogene,KNOWN_unitary_pseudogene:pseudogene,NOVEL_unitary_pseudogene:pseudogene,PUTATIVE_unitary_pseudogene:pseudogene,PUTATIVE_transcribed_unitary_pseudogene:pseudogene,_polymorphic_pseudogene	polymorphic:pseudogene,KNOWN_polymorphic_pseudogene:polymorphic pseudogene,NOVEL_polymorphic_pseudogene:polymorphic pseudogene,PUTATIVE_polymorphic_pseudogene:polymorphic pseudogene,_IG_pseudogene:pseudogenic gene segment,KNOWN_IG_pseudogene:pseudogenic gene segment,NOVEL_IG_pseudogene:pseudogenic gene segment,PUTATIVE_IG_pseudogene:pseudogenic gene segment"
-
-setenv VEGA_EQUIV7	"_translated_processed_pseudogene:pseudogene|pseudogenic gene segment|pseudogenic region,KNOWN_translated_processed_pseudogene:pseudogene|pseudogenic gene segment|pseudogenic region,NOVEL_translated_processed_pseudogene:pseudogene|pseudogenic gene segment|pseudogenic region,PUTATIVE_translated_processed_pseudogene:pseudogene|pseudogenic gene segment|pseudogenic region,_translated_unprocessed_pseudogene:pseudogene|pseudogenic gene segment|pseudogenic region,KNOWN_translated_unprocessed_pseudogene:pseudogene|pseudogenic gene segment|pseudogenic region,NOVEL_translated_unprocessed_pseudogene:pseudogene|pseudogenic gene segment|pseudogenic region,PUTATIVE_translated_unprocessed_pseudogene:pseudogene|pseudogenic gene segment|pseudogenic region,_TR_pseudogene:pseudogenic gene segment|pseudogenic region,KNOWN_TR_pseudogene:pseudogenic gene segment|pseudogenic region,NOVEL_TR_pseudogene:pseudogenic gene segment|pseudogenic region,PUTATIVE_TR_pseudogene:pseudogenic gene segment|pseudogenic region"
-
-setenv VEGA_EQUIV8	"NOVEL_rRNA:rRNA gene,NOVEL_macro_IncRNA:unclassified non-coding RNA gene"
+setenv VEGA_EQUIV	"_protein_coding:protein coding gene,KNOWN_protein_coding:protein coding gene,NOVEL_protein_coding:protein coding gene,PUTATIVE_protein_coding:protein coding gene,_polymorphic:protein coding gene,KNOWN_polymorphic:protein coding gene,NOVEL_polymorphic:protein coding gene,PUTATIVE_polymorphic:protein coding gene,_processed_transcript:unclassified non-coding RNA gene|unclassified gene|lncRNA gene,KNOWN_processed_transcript:unclassified non-coding RNA gene|unclassified gene|lncRNA gene,NOVEL_processed_transcript:unclassified non-coding RNA gene|unclassified gene|lncRNA gene,PUTATIVE_processed_transcript:unclassified non-coding RNA gene|unclassified gene|lncRNA gene,_non_coding:unclassified gene|unclassified non-coding RNA gene,KNOWN_non_coding:unclassified gene|unclassified non-coding RNA gene,NOVEL_non_coding:unclassified gene|unclassified non-coding RNA gene,PUTATIVE_non_coding:unclassified gene|unclassified non-coding RNA gene,_3prime_overlapping_ncrna:lncRNA gene,KNOWN_3prime_overlapping_ncrna:lncRNA gene,NOVEL_3prime_overlapping_ncrna:lncRNA gene,PUTATIVE_3prime_overlapping_ncrna:lncRNA gene,_ambiguous_orf:protein coding gene|unclassified gene,KNOWN_ambiguous_orf:protein coding gene|unclassified gene,NOVEL_ambiguous_orf:protein coding gene|unclassified gene,PUTATIVE_ambiguous_orf:protein coding gene|unclassified gene,_antisense:antisense lncRNA gene,KNOWN_antisense:antisense lncRNA gene,NOVEL_antisense:antisense lncRNA gene,PUTATIVE_antisense:antisense lncRNA gene,_lincRNA:lincRNA gene,KNOWN_lincRNA:lincRNA gene,NOVEL_lincRNA:lincRNA gene,PUTATIVE_lincRNA:lincRNA gene,_ncRNA_host:lncRNA gene,KNOWN_ncRNA_host:lncRNA gene,NOVEL_ncRNA_host:lncRNA gene,PUTATIVE_ncRNA_host:lncRNA gene,_retained_intron:protein coding gene|unclassified gene,KNOWN_retained_intron:protein coding gene|unclassified gene,NOVEL_retained_intron:protein coding gene|unclassified gene,PUTATIVE_retained_intron:protein coding gene|unclassified gene,_sense_intronic:intronic lncRNA gene,KNOWN_sense_intronic:intronic lncRNA gene,NOVEL_sense_intronic:intronic lncRNA gene,PUTATIVE_sense_intronic:intronic lncRNA gene,_sense_overlapping:lncRNA gene,KNOWN_sense_overlapping:lncRNA gene,NOVEL_sense_overlapping:lncRNA gene,PUTATIVE_sense_overlapping:lncRNA gene,_IG_gene:gene segment,KNOWN_IG_gene:gene segment,NOVEL_IG_gene:gene segment,PUTATIVE_IG_gene:gene segment,_TR_gene:gene segment,KNOWN_TR_gene:gene segment,NOVEL_TR_gene:gene segment,PUTATIVE_TR_gene:gene segment,TEC:unclassified gene,_TEC:unclassified gene,KNOWN_TEC:unclassified gene,NOVEL_TEC:unclassified gene,PUTATIVE_TEC:unclassified gene,_pseudogene:pseudogene,KNOWN_pseudogene:pseudogene,NOVEL_pseudogene:pseudogene,PUTATIVE_pseudogene:pseudogene,_unprocessed_pseudogene:pseudogene,KNOWN_unprocessed_pseudogene:pseudogene,NOVEL_unprocessed_pseudogene:pseudogene,PUTATIVE_unprocessed_pseudogene:pseudogene,_processed_pseudogene:pseudogene,KNOWN_processed_pseudogene:pseudogene,NOVEL_processed_pseudogene:pseudogene,PUTATIVE_processed_pseudogene:pseudogene,_transcribed_processed_pseudogene:pseudogene,KNOWN_transcribed_processed_pseudogene:pseudogene,NOVEL_transcribed_processed_pseudogene:pseudogene,PUTATIVE_transcribed_processed_pseudogene:pseudogene,_transcribed_unprocessed_pseudogene:pseudogene,KNOWN_transcribed_unprocessed_pseudogene:pseudogene,NOVEL_transcribed_unprocessed_pseudogene:pseudogene,PUTATIVE_transcribed_unprocessed_pseudogene:pseudogene,_transcribed_unitary_pseudogene:pseudogene,KNOWN_transcribed_unitary_pseudogene:pseudogene,NOVEL_transcribed_unitary_pseudogene:pseudogene,_unitary_pseudogene:pseudogene,KNOWN_unitary_pseudogene:pseudogene,NOVEL_unitary_pseudogene:pseudogene,PUTATIVE_unitary_pseudogene:pseudogene,PUTATIVE_transcribed_unitary_pseudogene:pseudogene,_polymorphic_pseudogene:polymorphic pseudogene,KNOWN_polymorphic_pseudogene:polymorphic pseudogene,NOVEL_polymorphic_pseudogene:polymorphic pseudogene,PUTATIVE_polymorphic_pseudogene:polymorphic pseudogene,_IG_pseudogene:pseudogenic gene segment,KNOWN_IG_pseudogene:pseudogenic gene segment,NOVEL_IG_pseudogene:pseudogenic gene segment,PUTATIVE_IG_pseudogene:pseudogenic gene segment,_translated_processed_pseudogene:pseudogene,KNOWN_translated_processed_pseudogene:pseudogene,NOVEL_translated_processed_pseudogene:pseudogene,PUTATIVE_translated_processed_pseudogene:pseudogene,_translated_unprocessed_pseudogene:pseudogene,KNOWN_translated_unprocessed_pseudogene:pseudogene,NOVEL_translated_unprocessed_pseudogene:pseudogene,PUTATIVE_translated_unprocessed_pseudogene:pseudogene,_TR_pseudogene:pseudogenic gene segment,KNOWN_TR_pseudogene:pseudogenic gene segment,NOVEL_TR_pseudogene:pseudogenic gene segment,PUTATIVE_TR_pseudogene:pseudogenic gene segment,NOVEL_rRNA:rRNA gene,NOVEL_macro_lncRNA:lncRNA gene"
 
 # equivalency term that indicates to map the associated raw term to
-# 'non-coding RNA gene' and all its children. This is applicable to all
-# providers. We do this in code rather than in config file because there is a
-# limit to the length of a configuration value
-setenv NC_RNA_TERM	"non-coding RNA gene or its children"
+# # 'non-coding RNA gene' and all its children. This is applicable to all
+# # providers. We do this in code rather than in config file because there is a
+# # limit to the length of a configuration value
+ setenv NC_RNA_TERM      "non-coding RNA gene or its children"
 
-# equivalency term that indicates to map the associated raw term to all
-# children of 'all feature types'. This is applicable to NCBI only.
-setenv ALL_FEATURES_TERM	"all feature types"
+# # equivalency term that indicates to map the associated raw term to all
+# # children of 'all feature types'. This is applicable to NCBI only.
+ setenv ALL_FEATURES_TERM        "all feature types or its children"
 
-setenv SCHEMADIR ${MGD_DBSCHEMADIR}
-setenv BCP_CMD "${PG_DBUTILS}/bin/bcpin.csh ${MGD_DBSERVER} ${MGD_DBNAME}"
+ setenv SCHEMADIR ${MGD_DBSCHEMADIR}
+ setenv BCP_CMD "${PG_DBUTILS}/bin/bcpin.csh ${MGD_DBSERVER} ${MGD_DBNAME}"
 
